--- a/index.html
+++ b/index.html
@@ -5,61 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lightning Climatology Cuba</title>
 
-  <!-- offline styles -->
+  <!-- Offline styles for Leaflet and plugins -->
   <link rel="stylesheet" href="./css/all.min.css" />
   <link rel="stylesheet" href="./css/leaflet.css" />
   <link rel="stylesheet" href="./css/leaflet-sidebar.css" />
   <link rel="stylesheet" href="./css/Control.FullScreen.css" />
   <link rel="stylesheet" href="./css/leaflet.draw.css" />
   <link rel="stylesheet" href="./css/L.Control.Locate.min.css" />
-  <link rel="stylesheet" href="./css/bootstrap.min.css" />
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <!-- Map container -->
   <div id="map"></div>
 
-  <!-- Leaflet Sidebar -->
-  <div id="sidebar" class="leaflet-sidebar collapsed">
-    <div class="leaflet-sidebar-tabs">
-      <!-- Estructura de la lista de tabs mejorada con roles y títulos accesibles -->
-      <ul role="tablist" aria-label="Map Controls">
-        <li role="presentation">
-          <a href="#home" role="tab" aria-controls="home" title="Toggle Map Layers">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-            <span class="sr-only">Toggle Map Layers</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="leaflet-sidebar-content">
-      <div class="leaflet-sidebar-pane" id="home">
-        <h4>Map Layers</h4>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <button class="btn btn-primary btn-block" id="btn-layer1" title="Activate TD Corregido Layer">TD Corregido</button>
-              <button class="btn btn-primary btn-block" id="btn-layer2" title="Activate Ng Clipped Layer">Ng Clipped</button>
-              <button class="btn btn-primary btn-block" id="btn-layer3" title="Activate N Corregido-1 Layer">N Corregido-1</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <!-- Offline Leaflet JS and others -->
-  <script src="./js/bootstrap.min.js"></script>
+  <!-- Offline Leaflet JS and other plugins -->
   <script src="./js/leaflet.js"></script>
   <script src="./js/leaflet-sidebar.js"></script>
   <script src="./js/Control.FullScreen.min.js"></script>
   <script src="./js/L.Control.Locate.min.js"></script>
   <script src="./js/leaflet.draw.js"></script>
-  <!-- EasyPrint JS -->
   <script src="./js/bundle.js"></script>
   <script src="./js/leaflet-search.js"></script>
   <script src="./js/leaflet.control.mouse-coordinates.js"></script>
